[project]
name = "stt"
version = "0.1.0"
description = "Speech-to-text for macOS - great for vibe coding and talking to AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "mlx-whisper>=0.4.0",
    "rumps>=0.4.0",
]

[project.scripts]
stt = "stt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["stt.py", "providers.py", "menubar.py"]

[tool.hatch.build.targets.wheel.sources]
"stt.py" = "stt.py"
"providers.py" = "providers.py"
"menubar.py" = "menubar.py"
