[project]
name = "stt"
dynamic = ["version"]
description = "Speech-to-text for macOS - great for vibe coding and talking to AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "mlx-whisper>=0.4.0",
    "rumps>=0.4.0",
    "watchdog>=3.0.0",
    "numba>=0.60.0",
    "parakeet-mlx>=0.5.0",
    "metaphone>=0.6",
    "packaging>=21.0",
]

[project.optional-dependencies]
parakeet = ["parakeet-mlx"]

[project.scripts]
stt = "stt:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
only-include = ["stt.py", "providers.py", "menubar.py", "mlx_worker.py", "parakeet_worker.py", "audio_worker.py", "postprocess.py", "overlay.py"]

[tool.hatch.build.targets.wheel.sources]
"stt.py" = "stt.py"
"providers.py" = "providers.py"
"menubar.py" = "menubar.py"
"mlx_worker.py" = "mlx_worker.py"
"parakeet_worker.py" = "parakeet_worker.py"
"audio_worker.py" = "audio_worker.py"
"postprocess.py" = "postprocess.py"
"overlay.py" = "overlay.py"
